# permutation_test

./: README.md  Using_permutation_test.ipynb  Using_permutation_test.mlx  _config.yml  demos.xml  functionSignatures.json  index.md  m-doc.md  permutation_test.m  permutation_test.mltbx  permutation_test.prj  py-doc.md  pyproject.toml
_posts/: 2021-11-19-Issues-and-Discussion.md
html/: Using_permutation_test.html
permutation_test/: __init__.py  permutation_test.py
permutation_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
permutation_testing/: __init__.py  permutation_test.py
permutation_testing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
permutation_testing/permutation_testing.egg-info/: PKG-INFO  SOURCES.txt
