[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["permutation_testing"]  # module folder name 
include = ["permutation_test*"]  # ["*"] by default
exclude = ["html*"]  # empty by default
namespaces = false  # true by default

[project]
name = "permutation_testing" # !!!!!!!!! NEEDS TO BE SAME NAME AS MODULE !!!!!!
version = "0.0.2" # DO NOT FORGET TO UPDATE 
authors = [
  { name="Duncan Tulimieri", email="tulimid@udel.edu" },
]
description = "Package for quick implementation of non-parametric permutation testing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://tulimid1.github.io/permutation_testing/"
"Bug Tracker" = "https://github.com/tulimid1/permutation_testing/issues"